# 0G-Mem

./: .env.example  .gitignore  Dockerfile  Dockerfile.bot  LICENSE  Makefile  README.md  docker-compose.yml  hardhat.config.js  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml
.github/workflows/: test.yml
api/: dependencies.py  main.py  models.py
api/routes/: memory.py  nft.py
contracts/: MemoryNFT.sol  MemoryRegistry.sol
contracts/scripts/: deploy.js
examples/: legal_assistant.py  multi_agent_demo.py
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.vercel/: project.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccessPanel.tsx  AddMemoryForm.tsx  AuditTimeline.tsx  HashDisplay.tsx  MemoryFeed.tsx  Navbar.tsx  ProofCard.tsx  QueryForm.tsx  WalletButton.tsx
frontend/lib/: api.ts  auth.ts  utils.ts  wagmi.ts
ogmem/: __init__.py  chain.py  compute.py  config.py  da.py  encryption.py  inference.py  mcp_server.py  memory.py  merkle.py  mock.py  proof.py  storage.py
proto/: disperser.proto
runtime/: __init__.py  agent.py  tools.py
scripts/: generate_proto.sh  zg_storage.js
telegram_bot/: __init__.py  __main__.py  bot.py
tests/: conftest.py  test_integration.py  test_memory.py  test_memory_optimizations.py  test_merkle.py  test_proof.py  test_runtime.py  test_telegram_bot.py  test_tui.py
tui/: __init__.py  __main__.py  app.py  styles.tcss
waitlist/: package-lock.json  package.json  tailwind.config.ts
waitlist/app/: globals.css  (+2 more)
(+10 files in other folders)
